# artel

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE-MIT  Makefile  README.md
.claude/agents/: flake-detective.md
.claude/skills/docs-drift/: SKILL.md
.claude/skills/docs-drift/evals/: README.md  evals.json  run-evals.sh  setup-fixtures.sh
.claude/skills/docs-drift/evals/fixtures/: 0-new-event-variant.patch  1-clean-test-only.patch  2-uncommitted-rustdoc.patch
.claude/skills/iroh-connection-fixture/: SKILL.md
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json  host-init.sh  on-create.sh
.githooks/: pre-push
.github/workflows/: ci.yml  nightly.yml
crates/artel-client/: Cargo.toml  README.md
crates/artel-client/src/: client.rs  error.rs  lib.rs  spawn.rs
crates/artel-client/tests/: client.rs
crates/artel-daemon/: Cargo.toml  README.md
crates/artel-daemon/src/: endpoint_setup.rs  gossip_bridge.rs  iroh_key.rs  lib.rs  main.rs  peer_addr_cache.rs  pidfile.rs  server.rs  session.rs  shutdown.rs  upgrade_protocol.rs
crates/artel-daemon/src/store/: fs.rs  memory.rs  mod.rs  record.rs
crates/artel-daemon/tests/: attachments.rs  auth_b5_control_frames.rs  auth_l1_spoofing.rs  auth_l3_signing.rs  auto_spawn.rs  end_to_end.rs  gossip.rs  host_resume.rs  identity.rs  iroh_gossip_fanout.rs  iroh_gossip_smoke.rs  iroh_identity.rs  iroh_join_addr_hint_n0.rs  iroh_join_announcement.rs  iroh_joiner_send_fanout.rs  iroh_joiner_send_rejected.rs  iroh_remote_mirror_persists_log.rs  iroh_session_closed.rs  iroh_subscribe_replay.rs  peer_addr_cache_pkarr.rs  persistence.rs  relay_unreachable.rs  sessions.rs  tiered_tickets.rs  workspace_ticket.rs
crates/artel-daemon/tests/common/: mod.rs
crates/artel-fs/: Cargo.toml  README.md
crates/artel-fs/src/: applier.rs  attachment.rs  docs_gate.rs  echo_guard.rs  endpoint_setup.rs  error.rs  filter.rs  keys.rs  keystore.rs  lib.rs  node.rs  peer_filter.rs  peer_map.rs  progress.rs  rules.rs  session_id.rs  ticket.rs  watcher.rs  workspace.rs
crates/artel-fs/tests/: attach_policy_host.rs  attach_policy_join.rs  attach_policy_state_dir_only.rs  crash_recovery.rs  default_read_write_unchanged_behaviour.rs  delete_propagates.rs  disk_resume.rs  docs_gate.rs  drop_bomb.rs  empty_file_no_error.rs  host_publishes_ticket.rs  host_restart_live_writes.rs  host_restart_live_writes_n0.rs  host_restart_ticket_stable.rs  host_restart_ungraceful_n0.rs  host_resume_session_id.rs  iroh_docs_smoke.rs  iroh_docs_smoke_pkarr.rs  iroh_internals.rs  join_bulk_export.rs  join_ticket_timeout.rs  large_files.rs  live_edit.rs  mixed_rules_first_match_wins.rs  outbound_dial_filter.rs  read_only_incoming_blocks_apply.rs  read_only_outgoing_blocks_publish.rs  read_only_outgoing_blocks_scan.rs  read_only_post_join_live_blocks.rs  read_only_post_join_live_delete_blocks.rs  relay_unreachable.rs  revoked_lurker.rs  round_trip.rs  run_readiness.rs  rw_redelivery.rs  ticket_envelope_rejects_old_shape.rs  ticket_envelope_round_trip.rs  tombstone_filter_check.rs  workspace_attachment.rs  workspace_filter.rs  (+4 more)
crates/artel-fs/tests/common/: mod.rs
crates/artel-iroh-setup/: Cargo.toml
crates/artel-iroh-setup/src/: key.rs  lib.rs  test_fixtures.rs
crates/artel-protocol/: Cargo.toml  README.md
crates/artel-protocol/proptest-regressions/: error.txt
crates/artel-protocol/src/: capability.rs  error.rs  gossip.rs  ids.rs  lib.rs  message.rs  rpc.rs  signing.rs  ticket.rs  upgrade.rs  version.rs
crates/artel-protocol/src/transport/: client.rs  codec.rs  framed.rs  mod.rs  path.rs  server.rs
docs/: consumer-guide.md  diagnosing-flaky-tests.md  handoff-code-review-fixes.md  handoff-phase-3b.md  handoff-post-2c-2c.md  roadmap.md
docs/adr/: 001-collab-substrate-platform.md  002-no-mls-for-tier1-write-revocation.md  003-daemon-stays-namespace-agnostic.md
docs/brainstorms/: 2026-05-22-workspace-host-join-safety-brainstorm.md  2026-05-26-host-restart-ticket-stable-brainstorm.md  2026-05-26-stable-session-id-brainstorm.md  2026-05-27-workspace-registry-brainstorm.md  2026-05-29-faster-cargo-test-brainstorm.md  2026-05-29-host-restart-peer-addr-cache-brainstorm.md  2026-05-30-auth-story-brainstorm.md  2026-06-01-auth-l1-fix3-shape.md  2026-06-02-control-frame-auth-and-replay-brainstorm.md  2026-06-02-control-frame-auth-slice-b5-brainstorm.md  2026-06-03-auth-slice-c-l2-capabilities-seed.md  2026-06-11-ticket-revocation-brainstorm.md  2026-06-12-revoked-lurker-unicast-ticket-brainstorm.md  2026-06-18-rw-redelivery-robust-guarantee-seed.md  2026-06-21-headless-driver-spike-learnings.md  2026-07-03-docs-gate-skill-brainstorm.md
docs/plans/: 2026-05-22-workspace-host-join-safety-plan.md  2026-05-26-stable-session-id-plan.md  2026-05-27-workspace-registry-plan.md  2026-05-29-faster-cargo-test-plan.md  2026-05-30-auth-l1-peer-id-collapse-plan.md  2026-06-01-auth-l1-fix3-plan.md  2026-06-02-auth-slice-b-l3-signing-plan.md  2026-06-03-auth-slice-b5-control-frame-auth-plan.md  2026-06-11-ticket-revocation-plan.md  2026-06-12-revoked-lurker-unicast-ticket-plan.md  2026-06-17-openmls-revocation.md  2026-06-18-rw-redelivery.md  2026-07-15-artel-daemon-adversarial-review-followups.md
docs/roadmap/: peer-identity-authentication.md
