[workspace]
resolver = "2"
members = [
    "crates/artel-daemon",
    "crates/artel-client",
    "crates/artel-protocol",
    "crates/artel-fs",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/svozza/artel"
rust-version = "1.95"

[workspace.dependencies]
artel-protocol = { path = "crates/artel-protocol", version = "0.0.0" }
artel-client = { path = "crates/artel-client", version = "0.0.0" }
artel-fs = { path = "crates/artel-fs", version = "0.0.0" }

# Third-party deps
async-trait = "0.1"
bytes = "1.7"
clap = { version = "4.5", features = ["derive", "env"] }
data-encoding = { version = "2.6", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
iroh = { version = "0.98", default-features = false, features = ["tls-ring"] }
nix = { version = "0.29", default-features = false, features = ["signal", "process"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "2.0"
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc", "use-std"] }
tokio = { version = "1.40", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.10", features = ["serde", "v4"] }

# Dev / test
pretty_assertions = "1.4"
proptest = "1.5"
proptest-derive = "0.5"
tempfile = "3.13"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pedantic lints we don't want
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
