[package]
name = "artel-client"
description = "Rust client for connecting to the artel-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
artel-protocol = { workspace = true, features = ["tokio"] }
clap = { workspace = true }
futures-util = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
# `test-utils` brings in `EndpointSetup::Testing` so the integration
# tests can stand up a hermetic iroh runtime without talking to n0.
# Auth-L1 (PROTOCOL_VERSION 4) removed the synthetic-peer-id path,
# so every daemon binds an iroh `Endpoint` — even tests that only
# exercise the IPC surface.
artel-daemon = { path = "../artel-daemon", features = ["test-utils"] }
iroh = { workspace = true, features = ["test-utils"] }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }

[[bin]]
name = "artel"
path = "src/bin/artel.rs"

[lints]
workspace = true
