[package]
name = "artel-daemon"
description = "Long-running local process that owns iroh node(s) and persists session state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
artel-protocol = { workspace = true, features = ["tokio"] }
async-trait = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
nix = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
artel-client = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "time"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "artel-daemon"
path = "src/main.rs"

[lints]
workspace = true
