[package]
name = "artel-daemon"
description = "Long-running local process that owns iroh node(s) and persists session state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["iroh"]
# iroh integration: real Endpoint + persisted secret key + gossip
# substrate. Off-mode keeps the daemon a local-only IPC bus with a
# synthetic peer id, useful for tests and embeds that don't want the
# network stack.
iroh = ["dep:iroh", "dep:iroh-gossip", "dep:rand", "dep:bytes"]
# Exposes `EndpointSetup::Testing { dns_pkarr }`, gated by iroh's
# own `test-utils` feature so `iroh::test_utils::DnsPkarrServer` is
# in scope. Implies `iroh` (the type only exists with a real
# endpoint).
test-utils = ["iroh", "iroh?/test-utils"]

[dependencies]
artel-protocol = { workspace = true, features = ["signing", "tokio"] }
async-trait = { workspace = true }
bytes = { workspace = true, optional = true }
clap = { workspace = true }
futures-util = { workspace = true }
iroh = { workspace = true, optional = true }
iroh-gossip = { workspace = true, optional = true }
nix = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
artel-client = { workspace = true }
artel-daemon = { path = ".", features = ["test-utils"] }
bytes = { workspace = true }
iroh = { workspace = true, features = ["test-utils"] }
iroh-gossip = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "time"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "artel-daemon"
path = "src/main.rs"

[lints]
workspace = true
