[package]
name = "artel-fs"
description = "Filesystem workspace sync built on top of artel sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
artel-client.workspace = true
artel-protocol.workspace = true
blake3 = "1"
bytes.workspace = true
futures-util.workspace = true
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.6"
iroh.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true
iroh-gossip.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
unicode-normalization = "0.1"
walkdir = "2"

[dev-dependencies]
artel-daemon = { path = "../artel-daemon" }
bytes.workspace = true
futures-util.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }

[lints]
workspace = true
