[package]
name = "artel-fs"
description = "Filesystem workspace sync built on top of artel sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
artel-client.workspace = true
artel-protocol.workspace = true
blake3 = "1"
bytes.workspace = true
futures-util.workspace = true
globset = "0.4"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.6"
iroh.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true
iroh-gossip.workspace = true
postcard.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
unicode-normalization = "0.1"
walkdir = "2"

[dev-dependencies]
artel-daemon = { path = "../artel-daemon" }
bytes.workspace = true
futures-util.workspace = true
nix = { workspace = true }
pretty_assertions.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "process", "rt-multi-thread", "test-util", "time"] }
tracing-subscriber.workspace = true

[lints]
workspace = true

# Helper binary used by `tests/crash_recovery.rs` only. Locating it
# via `env!("CARGO_BIN_EXE_crash_child")` is the standard pattern;
# the test fails fast if the binary isn't built.
[[bin]]
name = "crash_child"
path = "tests/bin/crash_child.rs"
test = false
doctest = false
bench = false

# Helper binary used by `tests/drop_bomb.rs` to verify
# `Workspace::Drop` fires (resp. stays quiet) on the ungraceful
# (resp. graceful) shutdown path. Same `CARGO_BIN_EXE_*` pattern.
[[bin]]
name = "drop_bomb_child"
path = "tests/bin/drop_bomb_child.rs"
test = false
doctest = false
bench = false
