[package]
name = "artel-fs"
description = "Filesystem workspace sync built on top of artel sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
publish = false

[features]
# Exposes `EndpointSetup::Testing { dns_pkarr }`, gated by iroh's
# own `test-utils` feature so `iroh::test_utils::DnsPkarrServer` is
# in scope. Off by default; integration tests turn it on (the
# `dev-dependency` on `iroh` below already pulls it in for tests).
test-utils = ["iroh/test-utils", "artel-iroh-setup/test-utils"]

[dependencies]
artel-client.workspace = true
artel-iroh-setup.workspace = true
artel-protocol.workspace = true
blake3 = "1"
bytes.workspace = true
futures-util.workspace = true
globset = "0.4"
notify = "8"
notify-debouncer-full = "0.6"
iroh.workspace = true
iroh-blobs.workspace = true
iroh-docs.workspace = true
iroh-gossip.workspace = true
n0-error.workspace = true
postcard.workspace = true
rand.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
unicode-normalization = "0.1"
walkdir = "2"

[dev-dependencies]
artel-daemon = { path = "../artel-daemon", features = ["test-utils"] }
artel-fs = { path = ".", features = ["test-utils"] }
bytes.workspace = true
futures-util.workspace = true
iroh = { workspace = true, features = ["test-utils"] }
iroh-relay.workspace = true
nix = { workspace = true }
pretty_assertions.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "process", "rt-multi-thread", "test-util", "time"] }
tracing-subscriber.workspace = true

[lints]
workspace = true

# Helper binary used by `tests/crash_recovery.rs` only. Locating it
# via `env!("CARGO_BIN_EXE_crash_child")` is the standard pattern;
# the test fails fast if the binary isn't built. `required-features`
# keeps the bin out of non-test builds: it uses the `test-utils`-gated
# `EndpointSetup::TestingWithRelay`, and test builds always have the
# feature on via the self dev-dependency.
[[bin]]
name = "crash_child"
path = "tests/bin/crash_child.rs"
test = false
doctest = false
bench = false
required-features = ["test-utils"]

# Helper binary used by `tests/drop_bomb.rs` to verify
# `Workspace::Drop` fires (resp. stays quiet) on the ungraceful
# (resp. graceful) shutdown path. Same `CARGO_BIN_EXE_*` pattern and
# same `required-features` rationale as `crash_child` above.
[[bin]]
name = "drop_bomb_child"
path = "tests/bin/drop_bomb_child.rs"
test = false
doctest = false
bench = false
required-features = ["test-utils"]
