[package]
name = "artel-protocol"
description = "Wire protocol types shared between artel-daemon and artel-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
publish = false

[features]
default = []
# Enables the async tokio-based IPC transport (length-prefixed postcard
# codec + Framed helpers). Off by default so dependents that only need the
# wire types stay dep-light.
tokio = ["dep:bytes", "dep:futures-util", "dep:tokio", "dep:tokio-util"]
# Per-message ed25519 signing primitives + verification API. Off by
# default so embedders that only consume `SessionMessage` (e.g. a future
# read-only viewer) pay no crypto-build cost. The signature *field* on
# `SessionMessage` is unconditional (it rides on the wire either way);
# the feature gates only the helpers in `crate::signing`.
signing = ["dep:ed25519-dalek"]

[dependencies]
bytes = { workspace = true, optional = true }
data-encoding = { workspace = true }
ed25519-dalek = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
postcard = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["io-util", "net", "fs"] }
tokio-util = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
postcard = { workspace = true }
pretty_assertions = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt"] }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
